--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
   <head>
 	<title>The Wedding of Nathan Jones and Joanna Chen</title>
+	<style>
+	  img {
+		  width: 100%;
+		  max-width: 1000px;
+		  min-wdith: 600px;
+	  }
+	</style>
   </head>
   <body>
-	<img src="./card_eng.svg"></img>
+	<img src="./card_en.png"></img>
+	<img src="./card_cn.png"></img>
+	</script>
   </body>
 </html>
